# demo-invoice-lines

./: app.py  pyproject.toml  serve.py
invoice_lines/: config.py  ui_components.py  utils.py
