[project]
name = "invoice_lines"
version = "0.1.0"
description = ""
authors = [
    {name = "Hadi Salameh",email = "hadi.salameh@hotmail.com"}
]

requires-python = ">=3.11,<4"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "litserve (>=0.2.6,<0.3.0)",
    "transformers @ git+https://github.com/huggingface/transformers",
    "torchvision (>=0.20.1,<0.21.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "decord (>=0.6.0,<0.7.0)",
    "openai (>=1.60.1,<2.0.0)",
    "bitsandbytes (>=0.45.1,<0.46.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "qwen-vl-utils @ git+https://github.com/HadiSDev/Qwen2-VL.git@main#subdirectory=qwen-vl-utils",
    "deepseek-vl2 @ git+https://github.com/HadiSDev/DeepSeek-VL2",
    "xformers (>=0.0.29.post1,<0.0.30)",
    "wheel (>=0.45.1,<0.46.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
